# nocraft

./: .gitignore  CMakeLists.txt
assets/shaders/: unlit.vs
src/: camera.h  chunk.cpp  chunk.h  main.cpp  main_test.cpp  math_simd.h  math_test.cpp  matrix.h  random.cpp  random.h  rendering.cpp  rendering.h  shader.cpp  shader.h  vec.h  world.cpp  world.h  xmath.h
